--- a/MorganTutoring-Blog-Courses-REGENERATED/privacy.html
+++ b/MorganTutoring-Blog-Courses-REGENERATED/privacy.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KS3 Maths & Science Blog | Morgan Tutoring</title>
-  <meta name="description" content="Blog posts with KS3 Maths & Science tips, revision routines, and confidence-building strategies for Years 7–9." />
+  <title>Privacy Policy | Morgan Tutoring</title>
+  <meta name="description" content="Privacy policy for Morgan Tutoring." />
   <meta name="keywords" content="Online KS3 Maths & Science Tutor UK, KS3 maths tutor online, KS3 science tutor online, Year 7 tutor, Year 8 tutor, Year 9 tutor, SEN inclusive tutoring, British curriculum tutor, international online tuition" />
   <link rel="stylesheet" href="styles.css" />
-  <link rel="canonical" href="https://morgantutoring.co.uk/blog" />
-  <meta property="og:title" content="KS3 Maths & Science Blog | Morgan Tutoring" />
-  <meta property="og:description" content="Blog posts with KS3 Maths & Science tips, revision routines, and confidence-building strategies for Years 7–9." />
+  <link rel="canonical" href="https://morgantutoring.co.uk/privacy" />
+  <meta property="og:title" content="Privacy Policy | Morgan Tutoring" />
+  <meta property="og:description" content="Privacy policy for Morgan Tutoring." />
   <meta property="og:type" content="website" />
 
   <script type="application/ld+json">
@@ -45,67 +45,7 @@
   </div>
 </header>
 
-
-<main class="section">
-  <div class="wrap">
-    <div class="card">
-      <h2>KS3 Maths &amp; Science Blog</h2>
-      <p class="muted">Practical, parent-friendly tips for Years 7–9. New posts added regularly.</p>
-      <div class="hr"></div>
-
-      <article>
-        <h3>How to support Year 9 revision without stress</h3>
-        <p class="small">Posted 14 Feb 2026</p>
-        <p class="muted">
-          Keep revision short and consistent. Aim for 10–15 minutes per topic, then stop. A calm routine beats last-minute cramming.
-        </p>
-        <ul class="ul">
-          <li>Pick one topic (not everything)</li>
-          <li>Do 5–8 quick questions</li>
-          <li>Review mistakes and write one “next step”</li>
-        </ul>
-      </article>
-
-      <div class="hr"></div>
-
-      <article>
-        <h3>Year 7: the best way to build confidence in Maths &amp; Science</h3>
-        <p class="small">Posted 14 Feb 2026</p>
-        <p class="muted">
-          Confidence comes from small wins. Use worked examples, then practise similar questions before moving on.
-        </p>
-        <ul class="ul">
-          <li>Explain it back in your own words</li>
-          <li>Learn 6 keywords per week in Science</li>
-          <li>Master number facts early in Maths</li>
-        </ul>
-      </article>
-
-      <div class="hr"></div>
-
-      <article>
-        <h3>KS3 exam technique: the 3 habits that improve marks</h3>
-        <p class="small">Posted 14 Feb 2026</p>
-        <p class="muted">
-          Marks often improve most when students learn how to show steps, use command words, and check carefully.
-        </p>
-        <ul class="ul">
-          <li>Underline command words (describe/explain/calculate)</li>
-          <li>Show working clearly, even for easy questions</li>
-          <li>Leave time to check one question properly</li>
-        </ul>
-      </article>
-
-      <div class="hr"></div>
-
-      <div class="ctaRow">
-        <a class="btn btnPrimary" href="index.html#booking">Book a slot</a>
-        <a class="btn btnSecondary" href="index.html#contact">Ask a question</a>
-      </div>
-    </div>
-  </div>
-</main>
-
+<main class="section"><div class="wrap"><div class="card"><h2>Privacy Policy</h2><p class="muted">We collect information you choose to share (email, booking, forms) to respond to enquiries and provide tutoring services.</p><ul class="ul"><li>We do not sell personal data.</li><li>We keep messages securely and only as long as needed.</li><li>You can request deletion by emailing morgantutoring@mail.com.</li></ul></div></div></main>
 
 <footer class="footer">
   <div class="wrap">
