--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
       <a href="index.html#contact">Contact</a>
     </nav>
   </div>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EducationalOrganization",
+  "name": "Morgan Tutoring",
+  "url": "https://morgantutoring.co.uk",
+  "description": "Online KS3 Maths and Science tutoring for Years 7–9. Small group, SEN-inclusive, UK and international students.",
+  "areaServed": ["United Kingdom", "Portugal", "International"],
+  "telephone": "07803 504702",
+  "email": "morgantutoring@mail.com"
+}
+</script>
 </header>
 
 
