--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
     <img class="logo" src="morgan-logo.png" alt="Morgan Tutoring logo" />
     <div class="brand">
       <h1>Morgan Tutoring</h1>
+      <h1>Online KS3 Maths & Science Tutor UK (Years 7–9)</h1>
+
+<p>
+Morgan Tutoring provides small group online tuition for Years 7–9 students across the UK and internationally. 
+We specialise in KS3 Maths and Science, helping students build confidence, strengthen understanding, 
+and prepare successfully for end-of-year exams.
+</p>
+
+<p>
+Our lessons are SEN-inclusive, calm, structured and led by fully qualified teachers who are DBS registered. 
+We focus on clear explanations, exam technique and steady progress — so students feel confident moving into GCSE study.
+</p>
+
+<div class="ctaRow">
+  <a class="btn btnPrimary" href="#booking">Book a lesson</a>
+  <a class="btn btnSecondary" href="tel:07803504702">Call 07803 504 702</a>
+</div>
       <p>Online Maths &amp; Science tuition for KS3 students (Years 7–9) · UK &amp; International</p>
     </div>
     <nav aria-label="Quick links">
