--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ We focus on clear explanations, exam technique and steady progress — so studen
 
 <main>
   <section class="hero">
+    
     <div class="wrap">
       <div class="heroCard">
         <div>
@@ -94,15 +95,23 @@ We focus on clear explanations, exam technique and steady progress — so studen
             structured practice, and a calm environment.
           </p>
 
-          <div class="priceBox" id="pricing" style="margin-top:14px;">
-            <div class="badge">Clear pricing</div>
-            <p class="lead" style="margin-top:8px;">
-              <b>£18</b> per lesson · Minimum <b>5 lessons</b> per block · Pay <b>£90</b> every 5 weeks
-            </p>
-            <div class="ctaRow">
-              <a class="btn btnPrimary" href="#booking">Book a slot</a>
-              <a class="btn btnSecondary" href="#payments">Payment options</a>
-            </div>
+         <h1>Online KS3 Maths & Science Tutor UK (Years 7–9)</h1>
+
+<p>
+Morgan Tutoring provides small group online tuition for Years 7–9 students across the UK and internationally. 
+We specialise in KS3 Maths and Science, helping students build confidence, strengthen understanding, 
+and prepare successfully for end-of-year exams.
+</p>
+
+<p>
+Our lessons are SEN-inclusive, calm, structured and led by fully qualified teachers who are DBS registered. 
+We focus on clear explanations, exam technique and steady progress — so students feel confident moving into GCSE study.
+</p>
+
+<div class="ctaRow">
+  <a class="btn btnPrimary" href="#booking">Book a lesson</a>
+  <a class="btn btnSecondary" href="tel:07803504702">Call 07803 504 702</a>
+</div>
           </div>
         </div>
 
