--- a/index.html
+++ b/index.html
@@ -122,26 +122,27 @@ We focus on clear explanations, exam technique and steady progress — so studen
       </div>
     </div>
   </section>
+<section class="section">
+  <div class="wrap">
+    <div class="card">
+      <h2>Who We Help</h2>
 
-  <section class="section" id="services">
-    <div class="wrap">
-      <div class="grid grid3">
-        <div class="card">
-          <h2>Who we help</h2>
-          <p class="muted">KS3 students (Years 7–9) who need a calmer pace, clearer explanations, or a confidence boost.</p>
-          <ul class="ul">
-            <li>Filling gaps and catching up</li>
-            <li>Building confidence and resilience</li>
-            <li>Stretch &amp; challenge for higher attainers</li>
-          </ul>
-        </div>
-        <div class="card">
-          <h2>Outcomes</h2>
-          <p class="muted">Better understanding, stronger homework &amp; test performance, and improved exam technique.</p>
-          <ul class="ul">
-            <li>Step-by-step teaching</li>
-            <li>Targeted practice</li>
-            <li>Progress guidance every block</li>
+      <ul class="ul">
+        <li>Year 7 students building strong foundations</li>
+        <li>Year 8 students needing confidence and clarity</li>
+        <li>Year 9 students preparing for end-of-year exams</li>
+        <li>SEN learners who benefit from calm, structured teaching</li>
+        <li>Families seeking reliable online KS3 Maths & Science support</li>
+      </ul>
+
+      <p>
+      Whether your child is struggling, coasting, or aiming higher, we provide focused support 
+      to help them move forward with confidence.
+      </p>
+    </div>
+  </div>
+</section>
+
           </ul>
         </div>
         <div class="card">
