--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     "@type":"LocalBusiness",
     "name":"Morgan Tutoring",
     "url":"https://morgantutoring.co.uk",
-    "telephone":"07803 504 702",
+    "telephone":"07836302552",
     "email":"morgantutoring@mail.com",
     "areaServed":["United Kingdom","Worldwide"],
     "description":"Online KS3 Maths & Science tutoring for Years 7–9. Small groups, SEN-inclusive, calm and confidence-building progress.",
