--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ We focus on clear explanations, exam technique and steady progress — so studen
 
 <div class="ctaRow">
   <a class="btn btnPrimary" href="#booking">Book a lesson</a>
-  <a class="btn btnSecondary" href="tel:07803504702">Call 07803 504 702</a>
+  <a class="btn btnSecondary" href="tel:07836302552">Call 07836 302 552</a>
 </div>
       <p>Online Maths &amp; Science tuition for KS3 students (Years 7–9) · UK &amp; International</p>
     </div>
@@ -68,7 +68,7 @@ We focus on clear explanations, exam technique and steady progress — so studen
   "url": "https://morgantutoring.co.uk",
   "description": "Online KS3 Maths and Science tutoring for Years 7–9. Small group, SEN-inclusive, UK and international students.",
   "areaServed": ["United Kingdom", "Portugal", "International"],
-  "telephone": "07803 504702",
+  "telephone": "07836 302 552",
   "email": "morgantutoring@mail.com"
 }
 </script>
@@ -104,7 +104,7 @@ We focus on clear explanations, exam technique and steady progress — so studen
 
 <div class="ctaRow">
   <a class="btn btnPrimary" href="#booking">Book a lesson</a>
-  <a class="btn btnSecondary" href="tel:07803504702">Call 07803 504 702</a>
+  <a class="btn btnSecondary" href="tel:07836302552">Call 07836 302 552</a>
 </div>
           </div>
         </div>
@@ -334,5 +334,5 @@ We focus on clear explanations, exam technique and steady progress — so studen
   }catch(e){}
 })();
 </script>
-   <a href="tel:07803504702">📞 Call Morgan Tutoring</a></body>
+   <a href="tel:07836302552">📞 Call Morgan Tutoring</a></body>
 </html>
