--- a/MorganTutoring-Phone-07803504702/index.html
+++ b/MorganTutoring-Phone-07803504702/index.html
@@ -271,9 +271,9 @@
         </div>
         <div class="hr"></div>
         <div class="social">
-          <a href="https://www.tiktok.com/@morgan.tutoring" target="_blank" rel="noreferrer">TikTok</a>
-          <a href="https://www.instagram.com/morgantutoring.co.uk/" target="_blank" rel="noreferrer">Instagram</a>
-          <a href="https://www.facebook.com/profile.php?id=61577207616918" target="_blank" rel="noreferrer">Facebook</a>
+         <a href="https://www.facebook.com/profile.php?id=61577207616918" target="_blank">Facebook</a>
+         <a href="https://www.tiktok.com/@morgan.tutoring" target="_blank">TikTok</a>
+         <a href="https://www.instagram.com/morgantutoring.co.uk/" target="_blank">Instagram</a>
         </div>
       </div>
       <div>
